[gd_scene load_steps=25 format=2]

[ext_resource path="res://objects/peasant.gd" type="Script" id=1]
[ext_resource path="res://utils/debug_draw_shape.gd" type="Script" id=2]
[ext_resource path="res://assets/alert.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/Hey1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/Hey2.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/peasant/frame0000.png" type="Texture" id=6]
[ext_resource path="res://assets/peasant/frame0001.png" type="Texture" id=7]
[ext_resource path="res://assets/peasant/frame0002.png" type="Texture" id=8]
[ext_resource path="res://assets/peasant/frame0003.png" type="Texture" id=9]
[ext_resource path="res://assets/peasant/frame0004.png" type="Texture" id=10]
[ext_resource path="res://assets/peasant/frame0005.png" type="Texture" id=11]
[ext_resource path="res://assets/peasant/frame0006.png" type="Texture" id=12]
[ext_resource path="res://assets/peasant/frame0007.png" type="Texture" id=13]
[ext_resource path="res://assets/peasant/frame0008.png" type="Texture" id=14]
[ext_resource path="res://assets/peasant/frame0009.png" type="Texture" id=15]
[ext_resource path="res://assets/peasant/frame0010.png" type="Texture" id=16]
[ext_resource path="res://assets/peasant/frame0011.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 36.576, 73.6365 )

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -6.32507, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, -30, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 81.0
angular_velocity_random = 0.59
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 5.0
scale_random = 0.6
scale_curve = SubResource( 3 )
color = Color( 0.866667, 0.866667, 0.866667, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 57.1271 )

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[node name="peasant" type="KinematicBody2D"]
input_pickable = false
collision_layer = 4
collision_mask = 2
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="CollisionShape2D"]
visible = false
script = ExtResource( 2 )
color = Color( 0.3, 0.3, 1, 1 )

[node name="dust_particles" type="Particles2D" parent="."]
position = Vector2( 0.355931, 72.8759 )
emitting = false
amount = 24
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1

[node name="alert_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="alert" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -118.017 )
texture = ExtResource( 3 )

[node name="jump_detector" type="Area2D" parent="."]
position = Vector2( 67.3394, 30.6989 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump_detector"]
shape = SubResource( 5 )

[node name="close_call" type="Area2D" parent="."]
position = Vector2( 89.6561, 21.2211 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="close_call"]
shape = SubResource( 6 )

[node name="player_collider" type="Area2D" parent="."]
position = Vector2( 19.7146, 53.5111 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_collider"]
position = Vector2( -2.9118, -44.405 )
shape = SubResource( 6 )

[node name="hey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="hey2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 32.4616, -6.97308 )
frames = SubResource( 7 )
animation = "idle"
playing = true

[connection signal="timeout" from="alert_timer" to="." method="_on_alert_timer_timeout"]
[connection signal="body_entered" from="jump_detector" to="." method="_on_jump_detector_body_entered"]
[connection signal="body_entered" from="close_call" to="." method="_on_close_call_body_entered"]
[connection signal="body_entered" from="player_collider" to="." method="_on_player_collider_body_entered"]
